src/test/ui/destructuring-assignment/struct_destructure_fail.stderr
error: expected identifier, found reserved identifier `_`
  --> $DIR/struct_destructure_fail.rs:11:17
   |
LL |     Struct { a, _ } = Struct { a: 1, b: 2 };
   |     ------      ^ expected identifier, found reserved identifier
   |     |
   |     while parsing this struct

error[E0026]: struct `Struct` does not have a field named `c`
  --> $DIR/struct_destructure_fail.rs:10:20
   |
LL |     Struct { a, b, c } = Struct { a: 0, b: 1 };
   |                    ^ struct `Struct` does not have this field

error[E0027]: pattern does not mention field `b`
  --> $DIR/struct_destructure_fail.rs:11:5
   |
LL |     Struct { a, _ } = Struct { a: 1, b: 2 };
   |     ^^^^^^^^^^^^^^^ missing field `b`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0026, E0027.
For more information about an error, try `rustc --explain E0026`.
